--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,13 @@ dependencies = [
     "pystac==1.10.0",
     "rasterio==1.3.10",
     "requests==2.32.3",
-    "shapely==2.0.5",
+    "shapely==2.0.7",
     "xarray==2024.11.0",
-    "rioxarray==0.18.1"
+    "rioxarray==0.18.1",
+    "mypy-boto3-s3==1.35.93",
+    "contextily==1.6.2",
+    "rashdf==0.7.1",
+    "boto3==1.35.98"
 ]
 
 [project.optional-dependencies]
