--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 dependencies = [
     "fiona==1.9.6",
     "geopandas==1.0.1",
-    "matplotlib==3.9.0",
+    "matplotlib==3.7.3",
     "pystac==1.10.0",
     "rasterio==1.3.10",
     "requests==2.32.3",
@@ -59,6 +59,11 @@ line-length = 120
 [tool.ruff.lint.per-file-ignores]
 "tests/**" = ["D"]
 "docs/**" = ["D"]
+"hecstac/hms/**" = ["D"]
+"server.py" = ["D"]
+"hecstac/utils/**" = ["D"]
+"hecstac/events/**" = ["D"]
+
 
 [tool.setuptools.packages.find]
 where = ["."]
