--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -39,4 +39,4 @@ jobs:
       push_to_registry: false
       version: ${{ needs.get-version.outputs.version }}
       branch: ${{ github.base_ref }}
-      platforms: 'linux/amd64'  # Only build for one platform to save time on PRs
+      platforms: 'linux/amd64,linux/arm64'
