--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -15,7 +15,7 @@ on:
         required: true
       platforms:
         type: string
-        default: 'linux/amd64,linux/arm64'
+        default: 'linux/amd64'
         required: false
 
 permissions:
