--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,11 @@ dependencies = [
     "rashdf==0.7.1",
     "s3fs==2025.3.1",
     "fsspec==2025.3.1",
-    "boto3",
+    "boto3==1.37.1",
     "dotenv==0.9.9",
-    "obstore==0.6.0"
+    "obstore==0.6.0",
+    "botocore==1.37.1",
+    "aiobotocore==2.21.1"
 ]
 
 [project.optional-dependencies]
