--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -5,34 +5,29 @@ on:
     branches: [ "main", "dev" ]
     paths:
       - 'hecstac/**'
+      - 'tests/**'
       - 'Dockerfile'
       - '.dockerignore'
+      - '.github/workflows/**'
+      - 'pyproject.toml'
 
 permissions:
   contents: read
   packages: write
 
 jobs:
-  get-version:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.get_version.outputs.VERSION }}
-    steps:
-      - uses: actions/checkout@v4
+  python-build:
+    name: Python Build and Test
+    uses: ./.github/workflows/python-build.yaml
+    with:
+      run_tests: false
       
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-          
-      - name: Extract version from hecstac
-        id: get_version
-        shell: pwsh
-        run: |
-          $version = python -c "import hecstac; print(hecstac.__version__);"
-          echo "VERSION=$version" >> $env:GITHUB_OUTPUT
+  get-version:
+    name: Extract Package Version
+    uses: ./.github/workflows/get-version.yaml
 
   docker-build-test:
+    name: Test Docker Build
     needs: get-version
     uses: ./.github/workflows/docker-build.yaml
     with:
