--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -26,10 +26,24 @@ jobs:
   get-version:
     name: Extract Package Version
     uses: ./.github/workflows/get-version.yaml
+    
+  check-version-exists:
+    name: Verify Version is New
+    needs: get-version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Fail if version already exists
+        if: needs.get-version.outputs.is_new_version != 'true'
+        run: |
+          echo "::error::ERROR: Version ${{ needs.get-version.outputs.version }} already exists as a tag."
+          echo "::error::Please update the version in hecstac/version.py before releasing to main."
+          exit 1
+      - name: Version check passed
+        run: echo "Version ${{ needs.get-version.outputs.version }} is new. Proceeding with release."
 
   docker-build-push:
     name: Build and Push Docker Image
-    needs: [python-build, get-version]
+    needs: [python-build, get-version, check-version-exists]
     uses: ./.github/workflows/docker-build.yaml
     with:
       push_to_registry: true
@@ -39,7 +53,7 @@ jobs:
 
   pypi-publish:
     name: Publish to PyPI
-    needs: [python-build, get-version]
+    needs: [python-build, get-version, check-version-exists]
     uses: ./.github/workflows/pypi-publish.yaml
     with:
       version: ${{ needs.get-version.outputs.version }}
@@ -48,7 +62,7 @@ jobs:
 
   github-release:
     name: Create GitHub Release
-    needs: [python-build, pypi-publish, get-version]
+    needs: [python-build, pypi-publish, get-version, check-version-exists]
     uses: ./.github/workflows/github-release.yaml
     with:
       version: ${{ needs.get-version.outputs.version }}
