--- a/.github/workflows/pypi-publish.yaml
+++ b/.github/workflows/pypi-publish.yaml
@@ -24,6 +24,37 @@ jobs:
         with:
           python-version: '3.10'
           
+      - name: Check if version exists on PyPI
+        id: check_pypi
+        run: |
+          # Install tools to check PyPI
+          pip install requests
+          
+          # Check if version exists on PyPI
+          VERSION_EXISTS=$(python -c "
+          import requests
+          import json
+          try:
+              response = requests.get('https://pypi.org/pypi/hecstac/json')
+              if response.status_code == 200:
+                  data = response.json()
+                  if '${{ inputs.version }}' in data.get('releases', {}):
+                      print('true')
+                  else:
+                      print('false')
+              else:
+                  print('false')  # Assume not exists if can't reach PyPI
+          except Exception:
+              print('false')  # Handle any errors
+          ")
+          
+          if [ "$VERSION_EXISTS" = "true" ]; then
+            echo "ERROR: Version ${{ inputs.version }} already exists on PyPI. Cannot publish duplicate version."
+            exit 1
+          else
+            echo "Version ${{ inputs.version }} does not exist on PyPI. Proceeding with publication."
+          fi
+          
       - name: Install publishing dependencies
         run: |
           python -m pip install --upgrade pip
