--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,22 +21,23 @@ classifiers = [
 ]
 
 dependencies = [
+    "aiobotocore==2.21.1",
+    "boto3==1.37.1",
+    "botocore==1.37.1",
+    "contextily==1.6.2",
+    "dotenv==0.9.9",
     "fiona==1.9.6",
+    "fsspec==2025.3.1",
     "geopandas==1.0.1",
     "matplotlib==3.7.3",
-    "pystac==1.13.0",
-    "requests==2.32.3",
-    "shapely==2.0.7",
     "mypy-boto3-s3",
-    "contextily==1.6.2",
-    "rashdf==0.7.1",
-    "s3fs==2025.3.1",
-    "fsspec==2025.3.1",
-    "boto3==1.37.1",
-    "dotenv==0.9.9",
     "obstore==0.6.0",
-    "botocore==1.37.1",
-    "aiobotocore==2.21.1"
+    "pystac==1.13.0",
+    "rashdf==0.7.1",
+    "rasqc==0.0.3",
+    "requests==2.32.3",
+    "s3fs==2025.3.1",
+    "shapely==2.0.7"
 ]
 
 [project.optional-dependencies]
