--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -23,6 +23,11 @@ jobs:
         with:
           python-version: '3.10'
           
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+          
       - name: Build wheel and source distribution
         run: python -m build
         
