--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "botocore==1.37.1",
     "contextily==1.6.2",
     "dotenv==0.9.9",
-    "fiona==1.9.6",
+    "fiona==1.10.0rc1",
     "fsspec==2025.3.1",
     "geopandas==1.0.1",
     "matplotlib==3.7.3",
