--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
     "rasqc==0.0.3",
     "requests==2.32.3",
     "s3fs==2025.3.1",
-    "shapely==2.0.7"
+    "shapely==2.0.7",
+    "rasqc==0.0.4"
 ]
 
 [project.optional-dependencies]
