--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -22,6 +22,14 @@ jobs:
     with:
       run_tests: false
       
+  sonarqube:
+    name: SonarQube Analysis
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
+    uses: ./.github/workflows/sonarqube.yaml
+      
   get-version:
     name: Extract Package Version
     uses: ./.github/workflows/get-version.yaml
