--- a/.github/workflows/docker-scout.yaml
+++ b/.github/workflows/docker-scout.yaml
@@ -23,8 +23,8 @@ jobs:
         run: |
           echo "DOCKER_USER exists: ${{ secrets.DOCKER_USER != '' }}"
           echo "DOCKER_PAT exists: ${{ secrets.DOCKER_PAT != '' }}"
-          echo "DOCKER_USER length: ${{ length(secrets.DOCKER_USER) }}"
-          echo "DOCKER_PAT length: ${{ length(secrets.DOCKER_PAT) }}"
+          echo "DOCKER_USER has value: ${{ secrets.DOCKER_USER && 'yes' || 'no' }}"
+          echo "DOCKER_PAT has value: ${{ secrets.DOCKER_PAT && 'yes' || 'no' }}"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
