--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -44,3 +44,4 @@ jobs:
       version: ${{ needs.get-version.outputs.version }}
       branch: ${{ github.base_ref }}
       platforms: 'linux/amd64'
+    secrets: inherit
