--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -40,8 +40,18 @@ jobs:
     needs: get-version
     uses: ./.github/workflows/docker-build.yaml
     with:
-      push_to_registry: false
+      push_to_registry: true
       version: ${{ needs.get-version.outputs.version }}
       branch: ${{ github.base_ref }}
       platforms: 'linux/amd64'
+    secrets: inherit
+
+  docker-scout:
+    needs: docker-build-test
+    permissions:
+      contents: read
+      pull-requests: write
+    uses: ./.github/workflows/docker-scout.yaml
+    with:
+      image_tag: ${{ needs.docker-build-test.outputs.image_tag }}
     secrets: inherit
