Refactor Docker build workflow to use metadata-action for tag generation

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -30,21 +30,26 @@ jobs:
   build-docker:
     runs-on: ubuntu-latest
     outputs:
-      image_tag: ${{ steps.set_tags.outputs.TAGS }}
+      image_tag: ${{ steps.meta.outputs.tags }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set Docker tags based on branch
-        id: set_tags
-        run: |
-          if [[ "${{ inputs.branch }}" == "main" ]]; then
-            echo "TAGS=ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${{ inputs.version }}" >> $GITHUB_OUTPUT
-          elif [[ "${{ inputs.branch }}" == "dev" ]]; then
-            echo "TAGS=ghcr.io/${{ github.repository }}:${{ inputs.version }}-dev" >> $GITHUB_OUTPUT
-          else
-            echo "TAGS=ghcr.io/${{ github.repository }}:pr-${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
-          fi
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            # tag events
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            # branch events - dev branch gets dev tag
+            type=raw,value=dev,enable=${{ github.ref == 'refs/heads/dev' }}
+            # main branch gets latest tag
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+            # PR builds get a unique tag based on PR number and commit
+            type=ref,event=pr
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -66,6 +71,7 @@ jobs:
           context: .
           platforms: ${{ inputs.platforms }}
           push: ${{ inputs.push_to_registry }}
-          tags: ${{ steps.set_tags.outputs.TAGS }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
