--- a/.github/workflows/get-version.yaml
+++ b/.github/workflows/get-version.yaml
@@ -20,18 +20,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          
+
       - name: Extract version from hecstac
         id: get_version
         run: |
-          VERSION=$(python -c "import hecstac; print(hecstac.__version__)")
+          VERSION=$(grep '__version__' hecstac/version.py | cut -d'"' -f2)
           echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
-      
+
       - name: Check if version exists as tag
         id: check_tag
         run: |
