--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -21,7 +21,7 @@ jobs:
     name: Python Build and Test
     uses: ./.github/workflows/python-build.yaml
     with:
-      run_tests: false
+      run_tests: true
 
   sonarqube:
     name: SonarQube Analysis
