--- a/.github/workflows/python-build.yaml
+++ b/.github/workflows/python-build.yaml
@@ -52,20 +52,17 @@ jobs:
         ruff check .
         ruff format --check
 
-    - name: Run tests
+    - name: Set up Conda and run tests
       if: inputs.run_tests
-      runs-on: "ubuntu-latest"
-      defaults:
-        run:
-          shell: bash -el {0}
-      steps:
-        - uses: actions/checkout@v4
-        - uses: conda-incubator/setup-miniconda@v3
-          with:
-            miniforge-variant: Mambaforge
-            activate-environment: anaconda-client-env
-            environment-file: tests/environment.yml
-            auto-activate-base: false
-        - name: Run pytest
-          run: |
-            pytest tests/
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        miniforge-variant: Mambaforge
+        activate-environment: anaconda-client-env
+        environment-file: tests/environment.yml
+        auto-activate-base: false
+
+    - name: Run pytest in Conda env
+      if: inputs.run_tests
+      shell: bash -el {0}
+      run: |
+        pytest tests/
