update main-push workflow to include version extraction step for Docker and PyPI jobs

--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -16,10 +16,14 @@ jobs:
     uses: ./.github/workflows/python-build.yaml
     with:
       run_tests: false
+      
+  get-version:
+    name: Extract Package Version
+    uses: ./.github/workflows/get-version.yaml
 
   docker-build-push:
     name: Build and Push Docker Image
-    needs: [python-build]
+    needs: [python-build, get-version]
     uses: ./.github/workflows/docker-build.yaml
     with:
       push_to_registry: true
@@ -29,7 +33,7 @@ jobs:
 
   pypi-publish:
     name: Publish to PyPI
-    needs: [python-build]
+    needs: [python-build, get-version]
     uses: ./.github/workflows/pypi-publish.yaml
     with:
       version: ${{ needs.get-version.outputs.version }}
