--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -3,7 +3,7 @@ aiobotocore==2.21.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
 aioitertools==0.12.0
-aiosignal==1.3.2
+aiosignal
 async-timeout==5.0.1
 attrs==25.3.0
 boto3==1.37.1
@@ -60,7 +60,7 @@ pystac==1.13.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
-rashdf==0.7.1
+rashdf==0.10.0
 rasqc
 rasterio==1.4.3
 referencing==0.36.2
