--- a/.github/workflows/docker-scout.yaml
+++ b/.github/workflows/docker-scout.yaml
@@ -5,14 +5,12 @@ permissions:
   pull-requests: write
 
 on:
-  workflow_call:
-    inputs:
-      image_tag:
-        type: string
-        required: true
-        description: 'Docker image tag to scan'
   schedule:
     - cron: '0 2 * * 1'  # Weekly on Monday at 2 AM UTC
+  push:
+    branches:
+      - dev
+      - main
 
 jobs:
   docker-scout:
@@ -36,7 +34,7 @@ jobs:
         uses: docker/scout-action@v1
         with:
           command: cves
-          image: ${{ inputs.image_tag || 'ghcr.io/fema-ffrd/hecstac:latest' }}
+          image: ghcr.io/fema-ffrd/hecstac:latest
           only-severities: critical,high
           summary: true
           exit-code: true
